# quikleads

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml
miscellaneous/: ollama_manager.py
models/: eStore.db  model.ipynb  models_v2.ipynb
