[project]
name = "leads-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "archgw==0.2.1",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-community>=0.3.17",
    "langchain-deepseek>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langchainhub>=0.1.21",
    "langgraph>=0.2.70",
    "ollama>=0.4.7",
    "transformers==4.37.0",
]
